[package]
name = "ressa-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-component-bindings = "=0.6.0"
ressa = "=0.8.2"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "jcbhmr:ressa"

[package.metadata.component.dependencies]
